--- a/site/src/HomePage/home.css
+++ b/site/src/HomePage/home.css
@@ -9,6 +9,7 @@ body {
     list-style-type: none;
     margin: 10px;
     padding: 10px;
+    /*background-image: url("../HomePage/backdrop.jpg"); */
 }
 
 h1{
