--- a/site/src/About Me/about.css
+++ b/site/src/About Me/about.css
@@ -56,3 +56,34 @@ a:visited{
     color: #1abc9c !important;
 }
 
+body .ab{
+    background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf   100%);
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+@media (max-width: 960px) and (min-width: 501px) {
+    li { width: 50%; } /* Show 2 logos per row on medium devices (tablets, phones in landscape) */
+    img { width: 50%; } /* Show 2 logos per row on medium devices (tablets, phones in landscape) */
+}
+
+@media (max-width: 500px) {
+    li { width: 100%; } /* On small screens, show one logo per row */
+    img { width: 100%; } /* On small screens, show one logo per row */
+}
+
+@media screen and (max-width: 600px) {
+    .nav {position: relative;}
+    .nav {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
+
