--- a/site/src/HomePage/home.css
+++ b/site/src/HomePage/home.css
@@ -5,6 +5,10 @@ li {
     display: inline;
 }
 
+.homep{
+    text-align: center;
+}
+
 body {
     list-style-type: none;
     margin: 10px;
@@ -22,4 +26,34 @@ h2{
     list-style-type: none;
     margin: 10px;
     padding: 10px;
+}
+
+.jordan{
+    width: 550px;
+    height: 450px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media (max-width: 500px) {
+    img { max-width: 100%;
+        height: auto; } /* On small screens, show one logo per row */
+    p{
+        width: 100%;
+    }
+}
+
+@media (max-width: 960px) and (min-width: 501px) {
+
+    img {
+
+        max-width: 100%;
+        height: auto;
+    } /* On small screens, show one logo per row */
+    p{
+        width: 100%;
+        display: inline-block;
+    }
+
 }
