--- a/site/src/Resume/resume.css
+++ b/site/src/Resume/resume.css
@@ -2,14 +2,24 @@ h2{
     text-align: center;
 }
 
+.resume{
+    margin: -10px;
+    padding: 0px;
+    margin-right: 0px;
+    padding-right: 0px;
+
+}
+
 @media (max-width: 960px) and (min-width: 501px) {
     li { width: 50%; } /* Show 2 logos per row on medium devices (tablets, phones in landscape) */
     img { width: 50%; } /* Show 2 logos per row on medium devices (tablets, phones in landscape) */
+    p { width: 50%; } /* Show 2 logos per row on medium devices (tablets, phones in landscape) */
 }
 
 @media (max-width: 500px) {
     li { width: 100%; } /* On small screens, show one logo per row */
     img { width: 100%; } /* On small screens, show one logo per row */
+    p { width: 100%; } /* On small screens, show one logo per row */
 }
 
 @media (max-width: 960px) {
@@ -17,6 +27,10 @@ h2{
     li {
          display: inline-block;
      }
+
+    p {
+        display: inline-block;
+    }
 
     img {
         display: inline-block;
@@ -42,7 +56,7 @@ h2{
 
 .intern{
     clear: both;
-    padding-top: 10px;
+    padding-top: 5px;
 }
 
 .gmail{
