--- a/site/src/About Me/about.css
+++ b/site/src/About Me/about.css
@@ -64,21 +64,88 @@ body .ab{
 }
 
 @media (max-width: 960px) and (min-width: 501px) {
-    li { width: 50%; } /* Show 2 logos per row on medium devices (tablets, phones in landscape) */
+    ul {
+        width: 50px;
+        height: 50px;
+        position: relative;
+        right: 0;
+        top: 0;
+        display: block;
+        text-align: left;
+        padding: 1px;
+        padding-left: 40px;
+    } /* Show 2 logos per row on medium devices (tablets, phones in landscape) */
+
+    li {
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 50px;
+        padding-left: 25px;
+        width: 50px;
+        display: inline;
+        text-align: left;
+        font-size: 34px;
+        margin: 0 0 3px 0;
+    }
+
     img { width: 50%; } /* Show 2 logos per row on medium devices (tablets, phones in landscape) */
 }
 
 @media (max-width: 500px) {
-    li { width: 100%; } /* On small screens, show one logo per row */
+    ul {
+        width: 50px;
+        height: 50px;
+        position: relative;
+        right: 0;
+        top: 0;
+        display: block;
+        text-align: left;
+        padding: 1px;
+        padding-left: 40px;
+    } /* On small screens, show one logo per row */
+
+    li {
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 50px;
+        padding-left: 25px;
+        width: 50px;
+        font-size: 34px;
+        display: inline;
+        text-align: left;
+        margin: 0 0 3px 0;
+    }
+
     img { width: 100%; } /* On small screens, show one logo per row */
 }
 
 @media screen and (max-width: 600px) {
-    .nav {position: relative;}
-    .nav {
-        position: absolute;
+    ul {
+        position: relative;
         right: 0;
         top: 0;
+        height: 50px;
+        width: 50px;
+        display: inline;
+        clear: both;
+        text-align: left;
+        padding: 1px;
+        padding-left: 40px;
+    }
+
+    li {
+        position: absolute;
+        margin: 0 0 3px 0;
+        padding-left: 25px;
+        right: 0;
+        top: 0;
+        height: 50px;
+        width: 50px;
+        font-size: 34px;
+        display: inline;
+        text-align: left;
     }
     a {
         float: none;
