--- a/site/src/About Me/about.css
+++ b/site/src/About Me/about.css
@@ -63,6 +63,10 @@ body .ab{
     padding: 0;
 }
 
+.about body{
+    background-image: linear-gradient(260deg, #1abc9c 0%, #555555   100%);
+}
+
 @media (max-width: 960px) and (min-width: 501px) {
     ul {
         width: 50px;
@@ -75,6 +79,7 @@ body .ab{
         padding: 1px;
         padding-left: 40px;
     } /* Show 2 logos per row on medium devices (tablets, phones in landscape) */
+
 
     li {
         position: absolute;
