--- a/site/src/HomePage/home.css
+++ b/site/src/HomePage/home.css
@@ -36,6 +36,15 @@ h2{
     margin-right: auto;
 }
 
+button{
+    height:20px;
+    width:100px;
+    margin: -20px -50px;
+    position:relative;
+    top:50%;
+    left:50%;
+}
+
 @media (max-width: 500px) {
     img { max-width: 100%;
         height: auto; } /* On small screens, show one logo per row */
