--- a/site/src/Resume/resume.css
+++ b/site/src/Resume/resume.css
@@ -2,6 +2,13 @@ h2{
     text-align: center;
 }
 
+html {
+    height: 100%;
+}
+body {
+    min-height: 100%;
+}
+
 .resume{
     margin: -10px;
     padding: 0px;
